--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ Modal Map -->
       </div>
     </div>
 
-    <div id="cam-info" class="absolute bottom-2 right-2 bg-black text-white text-xs px-2 py-1 rounded z-10"></div>
+    <!-- <div id="cam-info" class="absolute bottom-2 right-2 bg-black text-white text-xs px-2 py-1 rounded z-10"></div> -->
   
     <script src="https://unpkg.com/lucide@latest"></script>
   <script>
