--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Concepts Conveyed</title>
+  <title>MAIL</title>
   <style>
     body { margin: 0; overflow: hidden; }
     canvas { display: block; }
