--- a/index.html
+++ b/index.html
@@ -235,6 +235,22 @@ Modal Map -->
     </div>
 </div>
 
+<div class="absolute top-2 right-2 rounded-lg w-auto z-10">
+  <video id="descVideo" class="w-full h-[420px] object-contain rounded-xl hidden" controls playsinline preload="metadata"></video>
+    <div class="flex gap-2">
+    <button class="galleryBtn flex gap-2 text-center justify-center font-medium items-center bg-[#d3d2a5] hover:bg-[#f5f4ea] text-[#757741] w-full px-3 py-1 rounded-lg" data-gallery-id="arrival"
+     data-media='[{"type":"image","src":"./photos/master1.png"},
+     {"type":"image","src":"./photos/master2.png"},
+     {"type":"image","src":"./photos/master3.png"},
+     {"type":"image","src":"./photos/master1-n.png"},
+     {"type":"image","src":"./photos/master2-n.png"},
+     {"type":"image","src":"./photos/master3-n.png"}]'>
+      <i data-lucide="image" class="size-5 my-auto "></i>
+      <span class="font-semibold">Master Plan</span>
+    </button>
+    </div>
+</div>
+
 <!-- <div id="backdescription" class="description-box absolute top-2 right-2 bg-[#757741] rounded-lg shadow-lg w-96 z-20" style="display: none;">
   <button class="absolute top-2 right-2 text-[#f5f4ea] close-description bg-[#757741] rounded-full p-1">
     <i data-lucide="x"></i>
