--- a/index.html
+++ b/index.html
@@ -105,13 +105,12 @@ Modal Map -->
       <i data-lucide="image" class="size-5 my-auto "></i>
       <span class="font-semibold">Gallery</span>
     </button>
-    <a href="/Demo02/area1/360/" class="w-full">
-    <!-- <a href="/area1/360/" class="w-full"> -->
+    <!-- <a href="/Demo02/area1/360/" class="w-full">
         <button class="galleryBtn flex gap-2 text-center justify-center font-medium items-center bg-[#d3d2a5] hover:bg-[#f5f4ea] text-[#757741] w-full p-2 rounded-xl">
         <i data-lucide="rotate-3d" class="size-5 my-auto "></i>
         <span class="font-semibold">360 View</span>
         </button>
-    </a>
+    </a> -->
     </div>
 </div>
 
@@ -137,12 +136,12 @@ Modal Map -->
       <i data-lucide="image" class="size-5 my-auto "></i>
       <span class="font-semibold">Gallery</span>
     </button>
-    <a href="/Demo02/area2/360/" class="w-full">
+    <!-- <a href="/Demo02/area2/360/" class="w-full">
         <button class="galleryBtn flex gap-2 text-center justify-center font-medium items-center bg-[#d3d2a5] hover:bg-[#f5f4ea] text-[#757741] w-full p-2 rounded-xl">
         <i data-lucide="rotate-3d" class="size-5 my-auto "></i>
         <span class="font-semibold">360 View</span>
         </button>
-    </a>
+    </a> -->
     </div>
 </div>
 
@@ -171,12 +170,12 @@ Modal Map -->
       <i data-lucide="image" class="size-5 my-auto "></i>
       <span class="font-semibold">Gallery</span>
     </button>
-    <a href="/Demo02/area3/360/" class="w-full">
+    <!-- <a href="/Demo02/area3/360/" class="w-full">
         <button class="galleryBtn flex gap-2 text-center justify-center font-medium items-center bg-[#d3d2a5] hover:bg-[#f5f4ea] text-[#757741] w-full p-2 rounded-xl">
         <i data-lucide="rotate-3d" class="size-5 my-auto "></i>
         <span class="font-semibold">360 View</span>
         </button>
-    </a>
+    </a> -->
     </div>
 </div>
 
@@ -198,12 +197,12 @@ Modal Map -->
       <i data-lucide="image" class="size-5 my-auto "></i>
       <span class="font-semibold">Gallery</span>
     </button>
-    <a href="/Demo02/area4/360/" class="w-full">
+    <!-- <a href="/Demo02/area4/360/" class="w-full">
         <button class="galleryBtn flex gap-2 text-center justify-center font-medium items-center bg-[#d3d2a5] hover:bg-[#f5f4ea] text-[#757741] w-full p-2 rounded-xl">
         <i data-lucide="rotate-3d" class="size-5 my-auto "></i>
         <span class="font-semibold">360 View</span>
         </button>
-    </a>
+    </a> -->
     </div>
 </div>
 
@@ -226,12 +225,12 @@ Modal Map -->
       <i data-lucide="image" class="size-5 my-auto "></i>
       <span class="font-semibold">Gallery</span>
     </button>
-    <a href="/Demo02/area5/360/" class="w-full">
+    <!-- <a href="/Demo02/area5/360/" class="w-full">
         <button class="galleryBtn flex gap-2 text-center justify-center font-medium items-center bg-[#d3d2a5] hover:bg-[#f5f4ea] text-[#757741] w-full p-2 rounded-xl">
         <i data-lucide="rotate-3d" class="size-5 my-auto "></i>
         <span class="font-semibold">360 View</span>
         </button>
-    </a>
+    </a> -->
     </div>
 </div>
 
