update arrow button

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ elegance, and visual balance for sunbathing and casual relaxation.</p>
       <div class="relative w-auto max-w-[50%]" id="carouselWrap">
         <!-- Carousel -->
         <div class="relative flex items-center justify-center" id="carouselContainer">
-          <button id="prevBtn" class="relative left-2 bg-[#f5f4ea] hover:bg-[#757741] hover:text-[#f5f4ea] rounded-full p-2 z-10">
+          <button id="prevBtn" class="relative left-2 bg-[#f5f4ea] hover:bg-[#1F8389] hover:text-[#f5f4ea] rounded-full p-2 z-10">
             <i data-lucide="chevron-left"></i>
           </button>
 
@@ -310,14 +310,14 @@ elegance, and visual balance for sunbathing and casual relaxation.</p>
           playsinline
           preload="metadata"></video>
 
-          <button id="nextBtn" class="relative right-2 bg-[#f5f4ea] hover:bg-[#757741] hover:text-[#f5f4ea] rounded-full p-2 z-10">
+          <button id="nextBtn" class="relative right-2 bg-[#f5f4ea] hover:bg-[#1F8389] hover:text-[#f5f4ea] rounded-full p-2 z-10">
             <i data-lucide="chevron-right"></i>
           </button>
         </div>
         <div class="relative flex w-fit max-w-[90%] mx-auto mt-4 overflow-hidden">
         <!-- Left Arrow -->
         <button id="thumbLeft"
-          class="absolute left-0 top-1/2 -translate-y-1/2 bg-[#f5f4ea] hover:bg-[#757741] hover:text-[#f5f4ea] rounded-full p-1 shadow z-10">
+          class="absolute left-0 top-1/2 -translate-y-1/2 bg-[#f5f4ea] hover:bg-[#1F8389] hover:text-[#f5f4ea] rounded-full p-1 shadow z-10">
           <i data-lucide="chevron-left"></i>
         </button>
           <div id="thumbnailScroll" class="flex gap-2 overflow-x-auto scroll-smooth px-6 scrollbar-hide hidden">
@@ -330,7 +330,7 @@ elegance, and visual balance for sunbathing and casual relaxation.</p>
             <img src="./photos/PATIO_BACKYARD.jpg" class="thumbnail w-30 h-24 object-cover cursor-pointer border-2 border-transparent rounded" data-index="6" /> -->
           </div>
         <button id="thumbRight"
-          class="absolute right-0 top-1/2 -translate-y-1/2 bg-[#f5f4ea] hover:bg-[#757741] hover:text-[#f5f4ea] rounded-full p-1 shadow z-10">
+          class="absolute right-0 top-1/2 -translate-y-1/2 bg-[#f5f4ea] hover:bg-[#1F8389] hover:text-[#f5f4ea] rounded-full p-1 shadow z-10">
           <i data-lucide="chevron-right"></i>
         </button>
         </div>
