--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ elegance, and visual balance for sunbathing and casual relaxation.</p>
       </div>
     </div>
 
-    <div id="cam-info" class="absolute bottom-2 right-2 bg-black text-white text-xs px-2 py-1 rounded z-10"></div>
+    <!-- <div id="cam-info" class="absolute bottom-2 right-2 bg-black text-white text-xs px-2 py-1 rounded z-10"></div> -->
   
     <script src="https://unpkg.com/lucide@latest"></script>
   <script>
