--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ seating arrangements, offering a relaxed, convivial setting for entertaining.</p
   <button class="absolute top-2 right-2 text-[#f5f4ea] close-description bg-[#0E2C3F] rounded-full p-1">
     <i data-lucide="x"></i>
   </button>
-  <img src="./photos/garden1.png" alt="" class="rounded-lg w-full h-[200px] object-cover mb-2">
+  <img src="./photos/back4.png" alt="" class="rounded-lg w-full h-[200px] object-cover mb-2">
   <video id="descVideo" class="w-full h-[420px] object-contain rounded-xl hidden" controls playsinline preload="metadata"></video>
   <h4 class="text-lg font-bold text-[#f5f4ea] mx-4">Pool & Lounge Area</h4>
   <p class="text-sm mb-3 text-[#f5f4ea] mx-4 font-light">A 20' x 40' swimming pool anchors this sleek and understated lawn area, with 30" wide bluestone
