--- a/index.html
+++ b/index.html
@@ -34,23 +34,23 @@
 
 <div class="absolute flex gap-2 left-[50%] -translate-x-[50%] bottom-2 rounded-xl whitespace-nowrap">
     <button class="area-button flex gap-1 bg-[#1F8389] hover:bg-[#0E2C3F] text-[#0E2C3F] hover:text-[#1F8389] px-3 py-1 font-semibold rounded-lg data-[active=true]:bg-[#0E2C3F] data-[active=true]:text-[#1F8389]">
-      <h1 class="bg-[#0E2C3F] text-[#1F8389] rounded-full px-2">1</h1>
+      <h1 class="bg-[#0E2C3F] text-white rounded-full px-2">1</h1>
       Orchard & Meadow
     </button>
     <button class="area-button flex gap-1 bg-[#1F8389] hover:bg-[#0E2C3F] text-[#0E2C3F] hover:text-[#1F8389] px-3 py-1 font-semibold rounded-lg data-[active=true]:bg-[#0E2C3F] data-[active=true]:text-[#1F8389]">
-      <h1 class="bg-[#0E2C3F] text-[#1F8389] rounded-full px-2">2</h1>
+      <h1 class="bg-[#0E2C3F] text-white rounded-full px-2">2</h1>
       Kitchen / Potager Garden
     </button>
     <button class="area-button flex gap-1 bg-[#1F8389] hover:bg-[#0E2C3F] text-[#0E2C3F] hover:text-[#1F8389] px-3 py-1 font-semibold rounded-lg data-[active=true]:bg-[#0E2C3F] data-[active=true]:text-[#1F8389]">
-      <h1 class="bg-[#0E2C3F] text-[#1F8389] rounded-full px-2">3</h1>
+      <h1 class="bg-[#0E2C3F] text-white rounded-full px-2">3</h1>
       Fire Pit
     </button>
     <button class="area-button flex gap-1 bg-[#1F8389] hover:bg-[#0E2C3F] text-[#0E2C3F] hover:text-[#1F8389] px-3 py-1 font-semibold rounded-lg data-[active=true]:bg-[#0E2C3F] data-[active=true]:text-[#1F8389]">
-      <h1 class="bg-[#0E2C3F] text-[#1F8389] rounded-full px-2">4</h1>
+      <h1 class="bg-[#0E2C3F] text-white rounded-full px-2">4</h1>
       Cabana Kitchen
     </button>
     <button class="area-button flex gap-1 bg-[#1F8389] hover:bg-[#0E2C3F] text-[#0E2C3F] hover:text-[#1F8389] px-3 py-1 font-semibold rounded-lg data-[active=true]:bg-[#0E2C3F] data-[active=true]:text-[#1F8389]">
-      <h1 class="bg-[#0E2C3F] text-[#1F8389] rounded-full px-2">5</h1>
+      <h1 class="bg-[#0E2C3F] text-white rounded-full px-2">5</h1>
       Pool & Lounge Area
     </button>
 </div>
