--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <canvas id="webgl-canvas" class="absolute block top-0 lef-0 z-0"></canvas>
 
 <div class="absolute top-2 left-2 w-[200px] bg-white/10 backdrop-blur-sm p-1 rounded-lg">
-    <img src="./photos/logo.png" alt="">
+    <img loading="lazy" src="./photos/logo.png" alt="">
 </div>
 
 <div class="absolute flex gap-2 left-[50%] -translate-x-[50%] bottom-2 rounded-xl whitespace-nowrap">
@@ -77,7 +77,7 @@ Modal Map -->
   <div id="videoContent"
        class="relative w-[90%] max-w-3xl transform -translate-y-[100vh] opacity-0 transition-all duration-1000 ease-out">
     <button id="closeVideo" class="absolute top-2 right-2 text-white text-2xl font-bold z-10"></button>
-    <video id="videoPlayer" controls class="w-full h-[60vh] rounded-lg">
+    <video preload="none" id="videoPlayer" controls class="w-full h-[60vh] rounded-lg">
       <source src="./videos/full.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
@@ -89,8 +89,8 @@ Modal Map -->
   <button class="absolute top-2 right-2 text-white close-description bg-[#0E2C3F] rounded-full p-1">
     <i data-lucide="x"></i>
   </button>
-  <img src="./photos/entrance1.png" alt="" id="descImage" class="rounded-lg w-full h-[200px] object-cover mb-2">
-  <video id="descVideo" class="w-full h-[420px] object-contain rounded-xl hidden" controls playsinline preload="metadata"></video>
+  <img loading="lazy" src="./photos/entrance1.png" alt="" id="descImage" class="rounded-lg w-full h-[200px] object-cover mb-2">
+  <video preload="none" id="descVideo" class="w-full h-[420px] object-contain rounded-xl hidden" controls playsinline preload="metadata"></video>
   <h4 class="text-lg font-bold text-[#f5f4ea] mx-4">Orchard & Meadow</h4>
   <p class="text-sm mb-3 text-[#f5f4ea] mx-4 font-light">A serene and ecologically rich landscape feature, the Orchard & Meadow area blends productivity with
     natural beauty. Rows of apple trees are interplanted with a curated Northeast wildflower mix, designed
@@ -123,8 +123,8 @@ Modal Map -->
   <button class="absolute top-2 right-2 text-[#f5f4ea] close-description bg-[#0E2C3F] rounded-full p-1">
     <i data-lucide="x"></i>
   </button>
-  <img src="./photos/front3.png" alt="" id="descImage" class="rounded-lg w-full h-[200px] object-cover mb-2">
-  <video id="descVideo" class="w-full h-[420px] object-contain rounded-xl hidden" controls playsinline preload="metadata"></video>
+  <img loading="lazy" src="./photos/front3.png" alt="" id="descImage" class="rounded-lg w-full h-[200px] object-cover mb-2">
+  <video preload="none" id="descVideo" class="w-full h-[420px] object-contain rounded-xl hidden" controls playsinline preload="metadata"></video>
   <h4 class="text-lg font-bold text-[#f5f4ea] mx-4">Kitchen / Potager Garden</h4>
   <p class="text-sm mb-3 text-[#f5f4ea] mx-4 font-light">This productive garden space is anchored by raised beds for vegetables, herbs, and cut flowers,
     arranged with classic symmetry and functionality. A seasonal greenhouse and potting shed provide
@@ -159,8 +159,8 @@ Modal Map -->
   <button class="absolute top-2 right-2 text-[#f5f4ea] close-description bg-[#0E2C3F] rounded-full p-1">
     <i data-lucide="x"></i>
   </button>
-  <img src="./photos/back1.png" alt="" class="rounded-lg w-full h-[200px] object-cover mb-2">
-  <video id="descVideo" class="w-full h-[420px] object-contain rounded-xl hidden" controls playsinline preload="metadata"></video>
+  <img loading="lazy" src="./photos/back1.png" alt="" class="rounded-lg w-full h-[200px] object-cover mb-2">
+  <video preload="none" id="descVideo" class="w-full h-[420px] object-contain rounded-xl hidden" controls playsinline preload="metadata"></video>
   <h4 class="text-lg font-bold text-[#f5f4ea] mx-4">Fire Pit</h4>
   <p class="text-sm mb-3 text-[#f5f4ea] mx-4 font-light">Set beyond the pool as a destination and evening focal point, the reclaimed granite fire pit adds rustic
 character and permanence. The pit's generous proportions surround a 300,000 BTU burner, designed
@@ -192,8 +192,8 @@ sunset.</p>
   <button class="absolute top-2 right-2 text-[#f5f4ea] close-description bg-[#0E2C3F] rounded-full p-1">
     <i data-lucide="x"></i>
   </button>
-  <img src="./photos/cabana1.png" alt="" class="rounded-lg w-full h-[200px] object-cover mb-2">
-  <video id="descVideo" class="w-full h-[420px] object-contain rounded-xl hidden" controls playsinline preload="metadata"></video>
+  <img loading="lazy" src="./photos/cabana1.png" alt="" class="rounded-lg w-full h-[200px] object-cover mb-2">
+  <video preload="none" id="descVideo" class="w-full h-[420px] object-contain rounded-xl hidden" controls playsinline preload="metadata"></video>
   <h4 class="text-lg font-bold text-[#f5f4ea] mx-4">Cabana Kitchen</h4>
   <p class="text-sm mb-3 text-[#f5f4ea] mx-4 font-light">An informal, welcoming outdoor cooking and gathering area is framed by long planks of bluestone,
 which appear to dissolve organically into surrounding perennial gardens. The softened hardscape edge
@@ -229,8 +229,8 @@ seating arrangements, offering a relaxed, convivial setting for entertaining.</p
   <button class="absolute top-2 right-2 text-[#f5f4ea] close-description bg-[#0E2C3F] rounded-full p-1">
     <i data-lucide="x"></i>
   </button>
-  <img src="./photos/back4.png" alt="" class="rounded-lg w-full h-[200px] object-cover mb-2">
-  <video id="descVideo" class="w-full h-[420px] object-contain rounded-xl hidden" controls playsinline preload="metadata"></video>
+  <img loading="lazy" src="./photos/back4.png" alt="" class="rounded-lg w-full h-[200px] object-cover mb-2">
+  <video preload="none" id="descVideo" class="w-full h-[420px] object-contain rounded-xl hidden" controls playsinline preload="metadata"></video>
   <h4 class="text-lg font-bold text-[#f5f4ea] mx-4">Pool & Lounge Area</h4>
   <p class="text-sm mb-3 text-[#f5f4ea] mx-4 font-light">A 20' x 40' swimming pool anchors this sleek and understated lawn area, with 30" wide bluestone
 coping lending a refined, architectural edge. The design emphasizes simplicity and proportion, allowing
@@ -257,7 +257,7 @@ elegance, and visual balance for sunbathing and casual relaxation.</p>
 </div>
 
 <div class="absolute top-2 right-2 rounded-lg w-auto z-10">
-  <video id="descVideo" class="w-full h-[420px] object-contain rounded-xl hidden" controls playsinline preload="metadata"></video>
+  <video preload="none" id="descVideo" class="w-full h-[420px] object-contain rounded-xl hidden" controls playsinline preload="metadata"></video>
     <div class="flex gap-2">
     <button class="galleryBtn flex gap-2 text-center justify-center font-medium items-center bg-[#1F8389] hover:bg-[#f5f4ea] text-[#0E2C3F] w-full px-3 py-1 rounded-lg" data-gallery-id="arrival"
      data-media='[{"type":"image","src":"./photos/master1.png"},
@@ -281,8 +281,8 @@ elegance, and visual balance for sunbathing and casual relaxation.</p>
             <i data-lucide="chevron-left"></i>
           </button>
 
-          <img id="carouselImage" class="w-[800px] h-[600px] object-contain rounded-lg cursor-pointer" alt="Slide" />
-          <video id="carouselVideo"
+          <img loading="lazy" id="carouselImage" class="w-[800px] h-[600px] object-contain rounded-lg cursor-pointer" alt="Slide" />
+          <video preload="none" id="carouselVideo"
           class="w-[800px] h-[600px] object-contain rounded-lg cursor-pointer hidden"
           controls
           playsinline
