--- a/index.html
+++ b/index.html
@@ -272,6 +272,17 @@ elegance, and visual balance for sunbathing and casual relaxation.</p>
     </div>
 </div>
 
+<div id="fps-counter" style="
+  position:fixed;top:8px;left:8px;
+  background:rgba(0,0,0,0.6);color:#0f0;
+  font:12px monospace;padding:4px 8px;
+  border-radius:4px;z-index:9999;
+">
+  FPS: --
+</div>
+
+
+
  <!-- Carousel Section -->
     <div class="fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center z-50 hidden" id="carouselWrapper">
       <div class="relative w-auto max-w-[50%]" id="carouselWrap">
