--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <canvas id="webgl-canvas" class="absolute block top-0 lef-0 z-0"></canvas>
 
 <div class="absolute top-2 left-2 w-[200px] bg-white/10 backdrop-blur-sm p-1 rounded-lg">
-    <img loading="lazy" src="./photos/logo.png" alt="">
+    <img loading="lazy" src="./public/photos/logo.png" alt="">
 </div>
 
 <div class="absolute flex gap-2 left-[50%] -translate-x-[50%] bottom-2 rounded-xl whitespace-nowrap">
@@ -78,7 +78,7 @@ Modal Map -->
        class="relative w-[90%] max-w-3xl transform -translate-y-[100vh] opacity-0 transition-all duration-1000 ease-out">
     <button id="closeVideo" class="absolute top-2 right-2 text-white text-2xl font-bold z-10"></button>
     <video preload="none" id="videoPlayer" controls class="w-full h-[60vh] rounded-lg">
-      <source src="./videos/full.mp4" type="video/mp4">
+      <source src="./public/videos/full.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
@@ -89,7 +89,7 @@ Modal Map -->
   <button class="absolute top-2 right-2 text-white close-description bg-[#0E2C3F] rounded-full p-1">
     <i data-lucide="x"></i>
   </button>
-  <img loading="lazy" src="./photos/entrance1.png" alt="" id="descImage" class="rounded-lg w-full h-[200px] object-cover mb-2">
+  <img loading="lazy" src="./public/photos/entrance1.png" alt="" id="descImage" class="rounded-lg w-full h-[200px] object-cover mb-2">
   <video preload="none" id="descVideo" class="w-full h-[420px] object-contain rounded-xl hidden" controls playsinline preload="metadata"></video>
   <h4 class="text-lg font-bold text-[#f5f4ea] mx-4">Orchard & Meadow</h4>
   <p class="text-sm mb-3 text-[#f5f4ea] mx-4 font-light">A serene and ecologically rich landscape feature, the Orchard & Meadow area blends productivity with
@@ -100,13 +100,13 @@ Modal Map -->
     site context.</p>
     <div class="flex gap-2 mx-4 mb-4">
     <button class="galleryBtn flex gap-2 text-center justify-center font-medium items-center bg-[#1F8389] hover:bg-[#f5f4ea] text-[#0E2C3F] w-full p-2 rounded-xl" data-gallery-id="pool"
-     data-media='[{"type":"video","src":"./videos/entrance.mp4","poster":"./photos/entrance2.png"},
-     {"type":"image","src":"./photos/entrance1.png"},
-     {"type":"image","src":"./photos/entrance2.png"},
-     {"type":"image","src":"./photos/entrance3.png"},
-     {"type":"image","src":"./photos/entrance1-n.png"},
-     {"type":"image","src":"./photos/entrance2-n.png"},
-     {"type":"image","src":"./photos/entrance3-n.png"}]'>
+     data-media='[{"type":"video","src":"./public/videos/entrance.mp4","poster":"./public/photos/entrance2.png"},
+     {"type":"image","src":"./public/photos/entrance1.png"},
+     {"type":"image","src":"./public/photos/entrance2.png"},
+     {"type":"image","src":"./public/photos/entrance3.png"},
+     {"type":"image","src":"./public/photos/entrance1-n.png"},
+     {"type":"image","src":"./public/photos/entrance2-n.png"},
+     {"type":"image","src":"./public/photos/entrance3-n.png"}]'>
       <i data-lucide="image" class="size-5 my-auto "></i>
       <span class="font-semibold">Gallery</span>
     </button>
@@ -123,7 +123,7 @@ Modal Map -->
   <button class="absolute top-2 right-2 text-[#f5f4ea] close-description bg-[#0E2C3F] rounded-full p-1">
     <i data-lucide="x"></i>
   </button>
-  <img loading="lazy" src="./photos/front3.png" alt="" id="descImage" class="rounded-lg w-full h-[200px] object-cover mb-2">
+  <img loading="lazy" src="./public/photos/front3.png" alt="" id="descImage" class="rounded-lg w-full h-[200px] object-cover mb-2">
   <video preload="none" id="descVideo" class="w-full h-[420px] object-contain rounded-xl hidden" controls playsinline preload="metadata"></video>
   <h4 class="text-lg font-bold text-[#f5f4ea] mx-4">Kitchen / Potager Garden</h4>
   <p class="text-sm mb-3 text-[#f5f4ea] mx-4 font-light">This productive garden space is anchored by raised beds for vegetables, herbs, and cut flowers,
@@ -134,15 +134,15 @@ Modal Map -->
     supports a vibrant, seasonal rhythm of growing and harvesting.</p>
     <div class="flex gap-2 mx-4 mb-4">
     <button class="galleryBtn flex gap-2 text-center justify-center font-medium items-center bg-[#1F8389] hover:bg-[#f5f4ea] text-[#0E2C3F] w-full p-2 rounded-xl" data-gallery-id="house"
-     data-media='[{"type":"video","src":"./videos/frontraw.mp4","poster":"./photos/front3.png"},
-     {"type":"image","src":"./photos/front3.png"},
-     {"type":"image","src":"./photos/front1.png"},
-     {"type":"image","src":"./photos/front2.png"},
-     {"type":"image","src":"./photos/front4.png"},
-     {"type":"image","src":"./photos/front3-n.png"},
-     {"type":"image","src":"./photos/front1-n.png"},
-     {"type":"image","src":"./photos/front2-n.png"},
-     {"type":"image","src":"./photos/front4-n.png"}]'>
+     data-media='[{"type":"video","src":"./public/videos/frontraw.mp4","poster":"./public/photos/front3.png"},
+     {"type":"image","src":"./public/photos/front3.png"},
+     {"type":"image","src":"./public/photos/front1.png"},
+     {"type":"image","src":"./public/photos/front2.png"},
+     {"type":"image","src":"./public/photos/front4.png"},
+     {"type":"image","src":"./public/photos/front3-n.png"},
+     {"type":"image","src":"./public/photos/front1-n.png"},
+     {"type":"image","src":"./public/photos/front2-n.png"},
+     {"type":"image","src":"./public/photos/front4-n.png"}]'>
       <i data-lucide="image" class="size-5 my-auto "></i>
       <span class="font-semibold">Gallery</span>
     </button>
@@ -159,7 +159,7 @@ Modal Map -->
   <button class="absolute top-2 right-2 text-[#f5f4ea] close-description bg-[#0E2C3F] rounded-full p-1">
     <i data-lucide="x"></i>
   </button>
-  <img loading="lazy" src="./photos/back1.png" alt="" class="rounded-lg w-full h-[200px] object-cover mb-2">
+  <img loading="lazy" src="./public/photos/back1.png" alt="" class="rounded-lg w-full h-[200px] object-cover mb-2">
   <video preload="none" id="descVideo" class="w-full h-[420px] object-contain rounded-xl hidden" controls playsinline preload="metadata"></video>
   <h4 class="text-lg font-bold text-[#f5f4ea] mx-4">Fire Pit</h4>
   <p class="text-sm mb-3 text-[#f5f4ea] mx-4 font-light">Set beyond the pool as a destination and evening focal point, the reclaimed granite fire pit adds rustic
@@ -169,13 +169,13 @@ informal seating, this area provides a natural gathering place for conversation 
 sunset.</p>
     <div class="flex gap-2 mx-4 mb-4">
     <button class="galleryBtn flex gap-2 text-center justify-center font-medium items-center bg-[#1F8389] hover:bg-[#f5f4ea] text-[#0E2C3F] w-full p-2 rounded-xl" data-gallery-id="poolgarden"
-     data-media='[{"type":"video","src":"./videos/backyard.mp4","poster":"./photos/back3.png"},
-     {"type":"image","src":"./photos/back1.png"},
-     {"type":"image","src":"./photos/back2.png"},
-     {"type":"image","src":"./photos/back3.png"},
-     {"type":"image","src":"./photos/back1-n.png"},
-     {"type":"image","src":"./photos/back2-n.png"},
-     {"type":"image","src":"./photos/back3-n.png"}]'>
+     data-media='[{"type":"video","src":"./public/videos/backyard.mp4","poster":"./public/photos/back3.png"},
+     {"type":"image","src":"./public/photos/back1.png"},
+     {"type":"image","src":"./public/photos/back2.png"},
+     {"type":"image","src":"./public/photos/back3.png"},
+     {"type":"image","src":"./public/photos/back1-n.png"},
+     {"type":"image","src":"./public/photos/back2-n.png"},
+     {"type":"image","src":"./public/photos/back3-n.png"}]'>
       <i data-lucide="image" class="size-5 my-auto "></i>
       <span class="font-semibold">Gallery</span>
     </button>
@@ -192,7 +192,7 @@ sunset.</p>
   <button class="absolute top-2 right-2 text-[#f5f4ea] close-description bg-[#0E2C3F] rounded-full p-1">
     <i data-lucide="x"></i>
   </button>
-  <img loading="lazy" src="./photos/cabana1.png" alt="" class="rounded-lg w-full h-[200px] object-cover mb-2">
+  <img loading="lazy" src="./public/photos/cabana1.png" alt="" class="rounded-lg w-full h-[200px] object-cover mb-2">
   <video preload="none" id="descVideo" class="w-full h-[420px] object-contain rounded-xl hidden" controls playsinline preload="metadata"></video>
   <h4 class="text-lg font-bold text-[#f5f4ea] mx-4">Cabana Kitchen</h4>
   <p class="text-sm mb-3 text-[#f5f4ea] mx-4 font-light">An informal, welcoming outdoor cooking and gathering area is framed by long planks of bluestone,
@@ -202,17 +202,17 @@ for both everyday outdoor meals and larger gatherings, the space accommodates fl
 seating arrangements, offering a relaxed, convivial setting for entertaining.</p>
     <div class="flex gap-2 mx-4 mb-4">
     <button class="galleryBtn flex gap-2 text-center justify-center font-medium items-center bg-[#1F8389] hover:bg-[#f5f4ea] text-[#0E2C3F] w-full p-2 rounded-xl" data-gallery-id="arrival"
-     data-media='[{"type":"video","src":"./videos/cabana.mp4","poster":"./photos/cabana1.png"},
-     {"type":"image","src":"./photos/cabana1.png"},
-     {"type":"image","src":"./photos/cabana2.png"},
-     {"type":"image","src":"./photos/garden1.png"},
-     {"type":"image","src":"./photos/garden2.png"},
-     {"type":"image","src":"./photos/garden3.png"},
-     {"type":"image","src":"./photos/cabana1-n.png"},
-     {"type":"image","src":"./photos/cabana2-n.png"},
-     {"type":"image","src":"./photos/garden1-n.png"},
-     {"type":"image","src":"./photos/garden2-n.png"},
-     {"type":"image","src":"./photos/garden3-n.png"}]'>
+     data-media='[{"type":"video","src":"./public/videos/cabana.mp4","poster":"./public/photos/cabana1.png"},
+     {"type":"image","src":"./public/photos/cabana1.png"},
+     {"type":"image","src":"./public/photos/cabana2.png"},
+     {"type":"image","src":"./public/photos/garden1.png"},
+     {"type":"image","src":"./public/photos/garden2.png"},
+     {"type":"image","src":"./public/photos/garden3.png"},
+     {"type":"image","src":"./public/photos/cabana1-n.png"},
+     {"type":"image","src":"./public/photos/cabana2-n.png"},
+     {"type":"image","src":"./public/photos/garden1-n.png"},
+     {"type":"image","src":"./public/photos/garden2-n.png"},
+     {"type":"image","src":"./public/photos/garden3-n.png"}]'>
       <i data-lucide="image" class="size-5 my-auto "></i>
       <span class="font-semibold">Gallery</span>
     </button>
@@ -229,7 +229,7 @@ seating arrangements, offering a relaxed, convivial setting for entertaining.</p
   <button class="absolute top-2 right-2 text-[#f5f4ea] close-description bg-[#0E2C3F] rounded-full p-1">
     <i data-lucide="x"></i>
   </button>
-  <img loading="lazy" src="./photos/back4.png" alt="" class="rounded-lg w-full h-[200px] object-cover mb-2">
+  <img loading="lazy" src="./public/photos/back4.png" alt="" class="rounded-lg w-full h-[200px] object-cover mb-2">
   <video preload="none" id="descVideo" class="w-full h-[420px] object-contain rounded-xl hidden" controls playsinline preload="metadata"></video>
   <h4 class="text-lg font-bold text-[#f5f4ea] mx-4">Pool & Lounge Area</h4>
   <p class="text-sm mb-3 text-[#f5f4ea] mx-4 font-light">A 20' x 40' swimming pool anchors this sleek and understated lawn area, with 30" wide bluestone
@@ -239,11 +239,11 @@ generous seating capacity, shaded by a striking dual cantilever Tuuci umbrella, 
 elegance, and visual balance for sunbathing and casual relaxation.</p>
     <div class="flex gap-2 mx-4 mb-4">
     <button class="galleryBtn flex gap-2 text-center justify-center font-medium items-center bg-[#1F8389] hover:bg-[#f5f4ea] text-[#0E2C3F] w-full p-2 rounded-xl" data-gallery-id="arrival"
-     data-media='[{"type":"video","src":"./videos/backyard2.mp4","poster":"./photos/back4.png"},
-     {"type":"image","src":"./photos/back4.png"},
-     {"type":"image","src":"./photos/back5.png"},
-     {"type":"image","src":"./photos/back4-n.png"},
-     {"type":"image","src":"./photos/back5-n.png"}]'>
+     data-media='[{"type":"video","src":"./public/videos/backyard2.mp4","poster":"./public/photos/back4.png"},
+     {"type":"image","src":"./public/photos/back4.png"},
+     {"type":"image","src":"./public/photos/back5.png"},
+     {"type":"image","src":"./public/photos/back4-n.png"},
+     {"type":"image","src":"./public/photos/back5-n.png"}]'>
       <i data-lucide="image" class="size-5 my-auto "></i>
       <span class="font-semibold">Gallery</span>
     </button>
@@ -260,12 +260,12 @@ elegance, and visual balance for sunbathing and casual relaxation.</p>
   <video preload="none" id="descVideo" class="w-full h-[420px] object-contain rounded-xl hidden" controls playsinline preload="metadata"></video>
     <div class="flex gap-2">
     <button class="galleryBtn flex gap-2 text-center justify-center font-medium items-center bg-[#1F8389] hover:bg-[#f5f4ea] text-[#0E2C3F] w-full px-3 py-1 rounded-lg" data-gallery-id="arrival"
-     data-media='[{"type":"image","src":"./photos/master1.png"},
-     {"type":"image","src":"./photos/master2.png"},
-     {"type":"image","src":"./photos/master3.png"},
-     {"type":"image","src":"./photos/master1-n.png"},
-     {"type":"image","src":"./photos/master2-n.png"},
-     {"type":"image","src":"./photos/master3-n.png"}]'>
+     data-media='[{"type":"image","src":"./public/photos/master1.png"},
+     {"type":"image","src":"./public/photos/master2.png"},
+     {"type":"image","src":"./public/photos/master3.png"},
+     {"type":"image","src":"./public/photos/master1-n.png"},
+     {"type":"image","src":"./public/photos/master2-n.png"},
+     {"type":"image","src":"./public/photos/master3-n.png"}]'>
       <i data-lucide="image" class="size-5 my-auto "></i>
       <span class="font-semibold">Master Plan</span>
     </button>
