update photos and videos

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <canvas id="webgl-canvas" class="absolute block top-0 lef-0 z-0"></canvas>
 
 <div class="absolute top-2 left-2 w-[200px] bg-white/10 backdrop-blur-sm p-1 rounded-lg">
-    <img  src="./public/photos/logo.png" alt="">
+    <img  src="https://res.cloudinary.com/doyr0s17x/image/upload/v1755737574/logo_nit9rg.png" alt="">
 </div>
 
 <div class="absolute flex gap-2 left-[50%] -translate-x-[50%] bottom-2 rounded-xl whitespace-nowrap">
@@ -78,7 +78,7 @@ Modal Map -->
        class="relative w-[90%] max-w-3xl transform -translate-y-[100vh] opacity-0 transition-all duration-1000 ease-out">
     <button id="closeVideo" class="absolute top-2 right-2 text-white text-2xl font-bold z-10"></button>
     <video preload="metadata" id="videoPlayer" controls class="w-full h-[60vh] rounded-lg">
-      <source src="./public/videos/full.mp4" type="video/mp4">
+      <source src="https://res.cloudinary.com/doyr0s17x/video/upload/v1755737970/full_yihapz.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
@@ -89,7 +89,7 @@ Modal Map -->
   <button class="absolute top-2 right-2 text-white close-description bg-[#0E2C3F] rounded-full p-1">
     <i data-lucide="x"></i>
   </button>
-  <img  src="./public/photos/entrance1.jpeg" alt="" id="descImage" class="rounded-lg w-full h-[200px] object-cover mb-2">
+  <img  src="https://res.cloudinary.com/doyr0s17x/image/upload/v1755737546/entrance1_rkhpm2.jpg" alt="" id="descImage" class="rounded-lg w-full h-[200px] object-cover mb-2">
   <video id="descVideo" class="w-full h-[420px] object-contain rounded-xl hidden" controls playsinline preload="metadata"></video>
   <h4 class="text-lg font-bold text-[#f5f4ea] mx-4">Orchard & Meadow</h4>
   <p class="text-sm mb-3 text-[#f5f4ea] mx-4 font-light">A serene and ecologically rich landscape feature, the Orchard & Meadow area blends productivity with
@@ -100,13 +100,13 @@ Modal Map -->
     site context.</p>
     <div class="flex gap-2 mx-4 mb-4">
     <button class="galleryBtn flex gap-2 text-center justify-center font-medium items-center bg-[#1F8389] hover:bg-[#f5f4ea] text-[#0E2C3F] w-full p-2 rounded-xl" data-gallery-id="pool"
-     data-media='[{"type":"video","src":"./public/videos/entrance.mp4","poster":"./public/photos/entrance2.jpeg"},
-     {"type":"image","src":"./public/photos/entrance1.jpeg"},
-     {"type":"image","src":"./public/photos/entrance2.jpeg"},
-     {"type":"image","src":"./public/photos/entrance3.jpeg"},
-     {"type":"image","src":"./public/photos/entrance1-n.jpeg"},
-     {"type":"image","src":"./public/photos/entrance2-n.jpeg"},
-     {"type":"image","src":"./public/photos/entrance3-n.jpeg"}]'>
+     data-media='[{"type":"video","src":"https://res.cloudinary.com/doyr0s17x/video/upload/v1755737911/entrance_udjwda.mp4","poster":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737559/entrance2_s5karw.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737546/entrance1_rkhpm2.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737559/entrance2_s5karw.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737560/entrance3_uiquzh.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737547/entrance1-n_gqrse6.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737557/entrance2-n_xtcmoy.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737555/entrance3-n_sbue2p.jpg"}]'>
       <i data-lucide="image" class="size-5 my-auto "></i>
       <span class="font-semibold">Gallery</span>
     </button>
@@ -123,7 +123,7 @@ Modal Map -->
   <button class="absolute top-2 right-2 text-[#f5f4ea] close-description bg-[#0E2C3F] rounded-full p-1">
     <i data-lucide="x"></i>
   </button>
-  <img  src="./public/photos/front3.jpeg" alt="" id="descImage" class="rounded-lg w-full h-[200px] object-cover mb-2">
+  <img  src="https://res.cloudinary.com/doyr0s17x/image/upload/v1755737573/front3_rvz5be.jpg" alt="" id="descImage" class="rounded-lg w-full h-[200px] object-cover mb-2">
   <video id="descVideo" class="w-full h-[420px] object-contain rounded-xl hidden" controls playsinline preload="metadata"></video>
   <h4 class="text-lg font-bold text-[#f5f4ea] mx-4">Kitchen / Potager Garden</h4>
   <p class="text-sm mb-3 text-[#f5f4ea] mx-4 font-light">This productive garden space is anchored by raised beds for vegetables, herbs, and cut flowers,
@@ -134,15 +134,15 @@ Modal Map -->
     supports a vibrant, seasonal rhythm of growing and harvesting.</p>
     <div class="flex gap-2 mx-4 mb-4">
     <button class="galleryBtn flex gap-2 text-center justify-center font-medium items-center bg-[#1F8389] hover:bg-[#f5f4ea] text-[#0E2C3F] w-full p-2 rounded-xl" data-gallery-id="house"
-     data-media='[{"type":"video","src":"./public/videos/frontraw.mp4","poster":"./public/photos/front3.jpeg"},
-     {"type":"image","src":"./public/photos/front3.jpeg"},
-     {"type":"image","src":"./public/photos/front1.jpeg"},
-     {"type":"image","src":"./public/photos/front2.jpeg"},
-     {"type":"image","src":"./public/photos/front4.jpeg"},
-     {"type":"image","src":"./public/photos/front3-n.jpeg"},
-     {"type":"image","src":"./public/photos/front1-n.jpeg"},
-     {"type":"image","src":"./public/photos/front2-n.jpeg"},
-     {"type":"image","src":"./public/photos/front4-n.jpeg"}]'>
+     data-media='[{"type":"video","src":"https://res.cloudinary.com/doyr0s17x/video/upload/v1755737981/frontraw_ijhehy.mp4","poster":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737573/front3_rvz5be.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737573/front3_rvz5be.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737556/front1_ak8wlk.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737566/front2_tl518o.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737565/front4_oopzto.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737565/front3-n_l4oiwm.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737559/front1-n_xitzdk.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737564/front2-n_bepjqd.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737566/front4-n_ygvocv.jpg"}]'>
       <i data-lucide="image" class="size-5 my-auto "></i>
       <span class="font-semibold">Gallery</span>
     </button>
@@ -159,7 +159,7 @@ Modal Map -->
   <button class="absolute top-2 right-2 text-[#f5f4ea] close-description bg-[#0E2C3F] rounded-full p-1">
     <i data-lucide="x"></i>
   </button>
-  <img  src="./public/photos/back1.jpeg" alt="" class="rounded-lg w-full h-[200px] object-cover mb-2">
+  <img  src="https://res.cloudinary.com/doyr0s17x/image/upload/v1755737532/back1_cvji2r.jpg" alt="" class="rounded-lg w-full h-[200px] object-cover mb-2">
   <video id="descVideo" class="w-full h-[420px] object-contain rounded-xl hidden" controls playsinline preload="metadata"></video>
   <h4 class="text-lg font-bold text-[#f5f4ea] mx-4">Fire Pit</h4>
   <p class="text-sm mb-3 text-[#f5f4ea] mx-4 font-light">Set beyond the pool as a destination and evening focal point, the reclaimed granite fire pit adds rustic
@@ -169,13 +169,13 @@ informal seating, this area provides a natural gathering place for conversation 
 sunset.</p>
     <div class="flex gap-2 mx-4 mb-4">
     <button class="galleryBtn flex gap-2 text-center justify-center font-medium items-center bg-[#1F8389] hover:bg-[#f5f4ea] text-[#0E2C3F] w-full p-2 rounded-xl" data-gallery-id="poolgarden"
-     data-media='[{"type":"video","src":"./public/videos/backyard.mp4","poster":"./public/photos/back3.jpeg"},
-     {"type":"image","src":"./public/photos/back1.jpeg"},
-     {"type":"image","src":"./public/photos/back2.jpeg"},
-     {"type":"image","src":"./public/photos/back3.jpeg"},
-     {"type":"image","src":"./public/photos/back1-n.jpeg"},
-     {"type":"image","src":"./public/photos/back2-n.jpeg"},
-     {"type":"image","src":"./public/photos/back3-n.jpeg"}]'>
+     data-media='[{"type":"video","src":"https://res.cloudinary.com/doyr0s17x/video/upload/v1755737896/backyard_hhhq3u.mp4","poster":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737549/back3_ps8jjv.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737532/back1_cvji2r.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737543/back2_dquv29.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737549/back3_ps8jjv.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737538/back1-n_ta80ly.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737547/back2-n_kxvqdq.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737549/back3-n_ffviol.jpg"}]'>
       <i data-lucide="image" class="size-5 my-auto "></i>
       <span class="font-semibold">Gallery</span>
     </button>
@@ -192,7 +192,7 @@ sunset.</p>
   <button class="absolute top-2 right-2 text-[#f5f4ea] close-description bg-[#0E2C3F] rounded-full p-1">
     <i data-lucide="x"></i>
   </button>
-  <img  src="./public/photos/cabana1.jpeg" alt="" class="rounded-lg w-full h-[200px] object-cover mb-2">
+  <img  src="https://res.cloudinary.com/doyr0s17x/image/upload/v1755737533/cabana1_teumjv.jpg" alt="" class="rounded-lg w-full h-[200px] object-cover mb-2">
   <video id="descVideo" class="w-full h-[420px] object-contain rounded-xl hidden" controls playsinline preload="metadata"></video>
   <h4 class="text-lg font-bold text-[#f5f4ea] mx-4">Cabana Kitchen</h4>
   <p class="text-sm mb-3 text-[#f5f4ea] mx-4 font-light">An informal, welcoming outdoor cooking and gathering area is framed by long planks of bluestone,
@@ -202,17 +202,17 @@ for both everyday outdoor meals and larger gatherings, the space accommodates fl
 seating arrangements, offering a relaxed, convivial setting for entertaining.</p>
     <div class="flex gap-2 mx-4 mb-4">
     <button class="galleryBtn flex gap-2 text-center justify-center font-medium items-center bg-[#1F8389] hover:bg-[#f5f4ea] text-[#0E2C3F] w-full p-2 rounded-xl" data-gallery-id="arrival"
-     data-media='[{"type":"video","src":"./public/videos/cabana.mp4","poster":"./public/photos/cabana1.jpeg"},
-     {"type":"image","src":"./public/photos/cabana1.jpeg"},
-     {"type":"image","src":"./public/photos/cabana2.jpeg"},
-     {"type":"image","src":"./public/photos/garden1.jpeg"},
-     {"type":"image","src":"./public/photos/garden2.jpeg"},
-     {"type":"image","src":"./public/photos/garden3.jpeg"},
-     {"type":"image","src":"./public/photos/cabana1-n.jpeg"},
-     {"type":"image","src":"./public/photos/cabana2-n.jpeg"},
-     {"type":"image","src":"./public/photos/garden1-n.jpeg"},
-     {"type":"image","src":"./public/photos/garden2-n.jpeg"},
-     {"type":"image","src":"./public/photos/garden3-n.jpeg"}]'>
+     data-media='[{"type":"video","src":"https://res.cloudinary.com/doyr0s17x/video/upload/v1755737951/cabana_hsdxst.mp4","poster":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737533/cabana1_teumjv.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737533/cabana1_teumjv.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737536/cabana2_vbtji6.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737574/garden1_xb3q6b.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737574/garden2_tvq2gk.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737578/garden3_bbgtdv.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737533/cabana1-n_jd4iat.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737540/cabana2-n_jduhct.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737571/garden1-n_uzvm5h.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737578/garden2-n_i9g0v8.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737579/garden3-n_djvhrj.jpg"}]'>
       <i data-lucide="image" class="size-5 my-auto "></i>
       <span class="font-semibold">Gallery</span>
     </button>
@@ -229,7 +229,7 @@ seating arrangements, offering a relaxed, convivial setting for entertaining.</p
   <button class="absolute top-2 right-2 text-[#f5f4ea] close-description bg-[#0E2C3F] rounded-full p-1">
     <i data-lucide="x"></i>
   </button>
-  <img  src="./public/photos/back4.jpeg" alt="" class="rounded-lg w-full h-[200px] object-cover mb-2">
+  <img  src="https://res.cloudinary.com/doyr0s17x/image/upload/v1755737557/back4_qlsqgl.jpg" alt="" class="rounded-lg w-full h-[200px] object-cover mb-2">
   <video id="descVideo" class="w-full h-[420px] object-contain rounded-xl hidden" controls playsinline preload="metadata"></video>
   <h4 class="text-lg font-bold text-[#f5f4ea] mx-4">Pool & Lounge Area</h4>
   <p class="text-sm mb-3 text-[#f5f4ea] mx-4 font-light">A 20' x 40' swimming pool anchors this sleek and understated lawn area, with 30" wide bluestone
@@ -239,11 +239,11 @@ generous seating capacity, shaded by a striking dual cantilever Tuuci umbrella, 
 elegance, and visual balance for sunbathing and casual relaxation.</p>
     <div class="flex gap-2 mx-4 mb-4">
     <button class="galleryBtn flex gap-2 text-center justify-center font-medium items-center bg-[#1F8389] hover:bg-[#f5f4ea] text-[#0E2C3F] w-full p-2 rounded-xl" data-gallery-id="arrival"
-     data-media='[{"type":"video","src":"./public/videos/backyard2.mp4","poster":"./public/photos/back4.jpeg"},
-     {"type":"image","src":"./public/photos/back4.jpeg"},
-     {"type":"image","src":"./public/photos/back5.jpeg"},
-     {"type":"image","src":"./public/photos/back4-n.jpeg"},
-     {"type":"image","src":"./public/photos/back5-n.jpeg"}]'>
+     data-media='[{"type":"video","src":"https://res.cloudinary.com/doyr0s17x/video/upload/v1755737943/backyard2_qmugz6.mp4","poster":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737557/back4_qlsqgl.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737557/back4_qlsqgl.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737527/back5_foi7ch.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737549/back4-n_c6dhky.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737525/back5-n_zeoyfg.jpg"}]'>
       <i data-lucide="image" class="size-5 my-auto "></i>
       <span class="font-semibold">Gallery</span>
     </button>
@@ -260,12 +260,12 @@ elegance, and visual balance for sunbathing and casual relaxation.</p>
   <video id="descVideo" class="w-full h-[420px] object-contain rounded-xl hidden" controls playsinline preload="metadata"></video>
     <div class="flex gap-2">
     <button class="galleryBtn flex gap-2 text-center justify-center font-medium items-center bg-[#1F8389] hover:bg-[#f5f4ea] text-[#0E2C3F] w-full px-3 py-1 rounded-lg" data-gallery-id="arrival"
-     data-media='[{"type":"image","src":"./public/photos/master1.jpeg"},
-     {"type":"image","src":"./public/photos/master2.jpeg"},
-     {"type":"image","src":"./public/photos/master3.jpeg"},
-     {"type":"image","src":"./public/photos/master1-n.jpeg"},
-     {"type":"image","src":"./public/photos/master2-n.jpeg"},
-     {"type":"image","src":"./public/photos/master3-n.jpeg"}]'>
+     data-media='[{"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737588/master1_fmoeq0.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737536/master2_vf3q8a.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737535/master3_abiwid.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737579/master1-n_okrdqu.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737526/master2-n_c17ywy.jpg"},
+     {"type":"image","src":"https://res.cloudinary.com/doyr0s17x/image/upload/v1755737528/master3-n_k0poeo.jpg"}]'>
       <i data-lucide="image" class="size-5 my-auto "></i>
       <span class="font-semibold">Master Plan</span>
     </button>
